<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_calculator"
        tools:context=".CalculatorActivity">
    <dk.cphbusiness.androidkotlinintro.CalculatorKey
            android:id="@+id/button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@id/button_7"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:text="Enter"
            app:category="enter"
            app:layout_constraintBottom_toTopOf="@+id/guideline" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"/>
    <dk.cphbusiness.androidkotlinintro.CalculatorKey
            android:id="@+id/button_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@id/button_4"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@id/button_enter"
            android:layout_marginStart="8dp"
            app:text="7"
            app:category="digit"
            android:onClick="doDigit"
            app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <Button android:id="@+id/button_4"
            android:text="@string/button_4_text"
            android:textSize="@dimen/digit_text_size"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_7"
            app:layout_constraintEnd_toStartOf="@id/button_recall"
            android:background="@drawable/button"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline"/>
    <Button android:id="@+id/button_recall"
            android:text="@string/button_recall_text"
            android:textSize="@dimen/command_text_size"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_4"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
    />
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="276dp"
            android:id="@+id/guideline"/>
    <Button android:id="@+id/button_enter2"
            android:text="@string/button_enter_text"
            android:textSize="@dimen/command_text_size"
            android:layout_width="0dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="@id/button_4"
            app:layout_constraintEnd_toEndOf="@id/button_recall"
            android:background="@drawable/button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>